--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -7,7 +7,7 @@ author_profile: true
 
 {% include base_path %}
 
-
+<!-- TODO: update to loop through by date or some other ordering value and make better md file names in _portfolio -->
 {% for post in site.portfolio %}
   {% include archive-single.html %}
 {% endfor %}
